# autoware_objects_to_csv

./: CMakeLists.txt  README.md  package.xml
launch/: detectedobjects2csv.launch.xml  detectedobjectswithfeature2csv.launch.xml  trackedobjects2singlecsv.launch.xml
scripts/: trackedobjects2csv.py
src/: auto_trackedobjectstocsv.cpp  auto_trackedobjectstomultiplecsv.cpp  detectedobjectstocsv.cpp  detectedobjectswithfeaturetocsv.cpp  trackedobjectstocsv.cpp  trackedobjectstomultiplecsv.cpp
