<?xml version="1.0"?>
<package format="3">
  <name>objects_to_csv</name>
  <version>0.0.1</version>
  <description>A ROS2 package for tracking objects and exporting to CSV.</description>

  <maintainer email="support@map4.jp">Map4 Inc.</maintainer>
  <license>Private</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>tier4_perception_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>